global-network-policy/default-dns.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: default.dns
  namespace: default
spec:
  endpointSelector:
    matchLabels: {}
  egress:
    - toEndpoints:
      - matchLabels:
          k8s:io.kubernetes.pod.namespace: kube-system
          k8s:k8s-app: kube-dns
      toPorts:
        - ports:
          - protocol: ANY
            port: "53"
