global-network-policy/default-kafka.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default.kafka
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - ports:
      - protocol: TCP
        port: 9092
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: kafka
