global-network-policy/default-pgsql.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: default.pgsql
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: postgresql
  ingress:
    - toPorts:
      - ports:
        - protocol: TCP
          port: "5123"
      fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: default
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
